--- a/app/keys.css
+++ b/app/keys.css
@@ -1,10 +1,11 @@
 
 .key {
     border-radius: var(--borderRounding);
-    
+    border: solid var(--sizeVisualKeyBorder) lightcyan;
+
     box-sizing:border-box;
 
-    /*margin:var(--sizeKeySpace);*/
+    margin:var(--sizeKeySpace);
     
     display: inline-block;
 
@@ -15,8 +16,6 @@
     font-family: 'Open Sans', sans-serif;
 
     transition: border 0.25s, line-height 0.25s, font-size 0.25s;
-    box-shadow: 0 0 0 var(--sizeVisualKeyBorder) lightcyan inset;
-
     /* thicker border option:
         
    
